---------------------------
  Contributors
---------------------------

Dmitry Baikov
Steven Chamberlain
Thom Johansen
Thibault LeMeur
Pieter Palmers
Tom Szilagyi
Andrzej Szombierski 
Kjetil S.Matheussen
Pieter Palmers
Tim Blechmann

---------------------------
  Jackdmp changes log
---------------------------

2008-01-31 Stephane Letz  <letz@grame.fr>

	* Remove checking thread in CoreAudio driver, better device state change recovery strategy: the driver is stopped and restarted.
	* jack_thread_wait implementation.
	* Add jack_thread_wait client example.
	* Add jack_mp_thread_wait client example.

2008-01-30 Stephane Letz  <letz@grame.fr>
	
	* Latest jack_lsp code from jack SVN.
	* Update in usx2y.c and JackPort.cpp to match jackd 0.109.2.

2008-01-29 Stephane Letz  <letz@grame.fr>
	
	* Implement jack_recompute_total_latency and jack_recompute_total_latencies.
	* Remove fBufferSize field in JackGraphManager object.
	* Port connection callback, client side.

2008-01-28 Stephane Letz  <letz@grame.fr>

	* Updated API to match jack 0.109.0 version (in progress). Correct checking thread in CoreAudio driver.
	* Port connection callback, server side.
	* Cleanup jack_port_connected_to implementation.

2008-01-25 Stephane Letz  <letz@grame.fr>

	* OSX 32/64 bits version.

2008-01-24 Stephane Letz  <letz@grame.fr>

	* CoreAudio driver improvement: detect and notify abnormal situations (stopped driver in case of SR change...).

2008-01-03 Stephane Letz  <letz@grame.fr>

	* Dmitry Baikov MIDI patch : alsa_seqmidi and alsa_rammidi drivers.

2008-01-03 Stephane Letz  <letz@grame.fr>

	* Tim Blechmann patch for JackGraphManager::GetPortsAux memory leak, Tim Blechmann patch for scons install.

2007-12-12 Stephane Letz  <letz@grame.fr>

	* Cleanup in CoreAudio driver.

2007-12-11 Stephane Letz  <letz@grame.fr>

	* Change string management for proper compilation with gcc 4.2.2. JackLog cleanup.

2007-12-08 Stephane Letz  <letz@grame.fr>

	* Tim Blechmann scons patch.
