@@ -17,6 +17,10 @@ Tim Blechmann
   Jackdmp changes log
 ---------------------------
 
+2008-02-01 Stephane Letz  <letz@grame.fr>
+
+	* Move transport related methods from JackEngine to JackServer.
+
 2008-01-31 Stephane Letz  <letz@grame.fr>
 
 	* Remove checking thread in CoreAudio driver, better device state change recovery strategy: the driver is stopped and restarted.
